--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,8 @@
   <exec_depend>rviz</exec_depend>
   <exec_depend>xacro</exec_depend>
 
+  <build_depend>asv_arov_interfaces</build_depend>
+
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
@@ -20,6 +22,7 @@
 
   <exec_depend>navigation2</exec_depend>
   <exec_depend>ros2launch</exec_depend>
+  <exec_depend>asv_arov_interfaces</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
