--- a/config/asv_nav2_params.yaml
+++ b/config/asv_nav2_params.yaml
@@ -1,7 +1,42 @@
+#--- ASV Nav2 Params ---#
+# 1. bt_navigator
+# 2. controller_server
+# 3. local_costmap
+# 4. global_costmap
+# 5. map_server
+# 6. planner_server
+# 7. behavior_server
+
+bt_navigator:
+  ros__parameters:
+    use_sim_time: false
+    bt_xml_filename: "/opt/ros/jazzy/share/nav2_bt_navigator/behavior_trees/navigate_to_pose_w_replanning_and_recovery.xml"
+    default_nav_to_pose_bt_xml: "/opt/ros/jazzy/share/nav2_bt_navigator/behavior_trees/navigate_to_pose_w_replanning_and_recovery.xml"
+    #default_nav_through_poses_bt_xml: "/opt/ros/jazzy/share/nav2_bt_navigator/behavior_trees/navigate_through_poses_w_replanning_and_recovery.xml"
+    global_frame: "map"
+    robot_base_frame: "asv/base_link"
+    # Add these to silence the warning
+    follow_path_error_code: 10
+    compute_path_error_code: 11
+    # Optional error code mapping
+    error_code_names:
+      - follow_path_error_code
+      - compute_path_error_code
+      - goal_check_failure_error_code
+      - planner_failed_error_code
+      - unknown_error_code
+    #plugin_lib_names:
+      #- nav2_spin_action_bt_node
+      #- nav2_compute_path_to_pose_action_bt_node
+      #- nav2_follow_path_action_bt_node
+      #- nav2_spin_action_bt_node  # <- This one is missing!
+      #- nav2_wait_action_bt_node
+      #- nav2_back_up_action_bt_node
+      #- nav2_clear_costmap_service_bt_node
+
 #--- prediction_horizon_s = steps * dt ---#
 #--- prediction_horizon_s * vmax <= local_side/2 otherwise movement will stutter --#
 #--- prediction_horizon_s * max_speed / path_resolution / 3.0 = path_offset ---#
-
 controller_server:
   ros__parameters:
     controller_frequency: 20.0
@@ -44,7 +79,8 @@ controller_server:
                  "PathAlignCritic",
                  "PathAngleCritic",
                  "PathFollowCritic",
-                 "PreferForwardCritic"]
+                 "PreferForwardCritic",
+                 "TwirlingCritic"]
       ConstraintCritic:
         enabled: True
         cost_power: 1
@@ -87,32 +123,47 @@ controller_server:
         cost_weight: 5.0
         offset_from_furthest: 10
         threshold_to_consider: 1
-      PreferForwardCritic:
+      PreferForwardCritic:  # incentivize always moving forwards instead of backwards/oblique angles
         enabled: True
         cost_power: 1
         cost_weight: 5.0
         threshold_to_consider: 1
-#      TwirlingCritic: # disable on ASV, makes sure AROV doesn't spin in place
-#        enabled: False
-#        twirling_cost_power: 1
-#        twirling_cost_weight: 10.0
+      TwirlingCritic: # needed for omni, makes sure AROV doesn't spin in place
+        enabled: False
+        twirling_cost_power: 1
+        twirling_cost_weight: 10.0
 
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
       required_movement_radius: 0.5
-      movement_time_allowance: 10
+      movement_time_allowance: 10 # if not moving 0.5m in 10s then movement failed
 
     general_goal_checker:
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.1
-      yaw_goal_tolerance: 0.1
-      stateful: False
+      xy_goal_tolerance: 1
+      yaw_goal_tolerance: 1
+      stateful: False # do not check xy again after rotating to pose
+
+local_costmap:
+  local_costmap:
+    ros__parameters:
+      global_frame: odom
+      robot_base_frame: asv/base_frame
+      robot_radius: 0.65
+      height: 3
+      width: 3
+      resolution: 0.01
+      footprint: "[[0.325, 0.425], [0.325, -0.425], [-0.325, -0.425], [-0.325, 0.425]]"
+      publish_frequency: 5.0
+      update_frequency: 5.0
+      use_sim_time: False
+      rolling_window: True
 
 global_costmap:
   global_costmap:
     ros__parameters:
       global_frame: map
-      robot_base_frame: "arov/base_frame"
+      robot_base_frame: asv/base_frame
       robot_radius: 0.65
       resolution: 0.01
       update_frequency: 5.0
@@ -137,17 +188,43 @@ global_costmap:
       always_send_full_costmap: True
       service_introspection_mode: "disabled"
 
-local_costmap:
-  local_costmap:
-    ros__parameters:
-      global_frame: odom
-      robot_base_frame: "arov/base_frame"
-      robot_radius: 0.65
-      height: 3
-      width: 3
-      resolution: 0.01
-      footprint: "[[0.325, 0.425], [0.325, -0.425], [-0.325, -0.425], [-0.325, 0.425]]"
-      publish_frequency: 5.0
-      update_frequency: 5.0
-      use_sim_time: False
-      rolling_window: True
+map_server:
+  ros__parameters:
+    use_sim_time: false
+    yaml_filename: ""
+
+planner_server:
+  ros__parameters:
+    use_sim_time: false
+    planner_plugins: ["GridBased"]
+    GridBased:
+      plugin: "nav2_navfn_planner::NavfnPlanner"
+      tolerance: 0.5
+
+behavior_server:
+  ros__parameters:
+    local_costmap_topic: local_costmap/costmap_raw
+    local_footprint_topic: local_costmap/published_footprint
+    global_costmap_topic: global_costmap/costmap_raw
+    global_footprint_topic: global_costmap/published_footprint
+    cycle_frequency: 10.0
+    behavior_plugins: ["spin", "backup", "drive_on_heading", "wait", "assisted_teleop"]
+    spin:
+      plugin: "nav2_behaviors::Spin"
+    backup:
+      plugin: "nav2_behaviors::BackUp"
+    drive_on_heading:
+      plugin: "nav2_behaviors::DriveOnHeading"
+    wait:
+      plugin: "nav2_behaviors::Wait"
+    assisted_teleop:
+      plugin: "nav2_behaviors::AssistedTeleop"
+    local_frame: odom
+    global_frame: map
+    robot_base_frame: asv/base_link
+    transform_timeout: 0.1
+    simulate_ahead_time: 2.0
+    max_rotational_vel: 0.5
+    min_rotational_vel: 0.4
+    rotational_acc_lim: 3.2
+    enable_stamped_cmd_vel: False
