--- a/config/arov_nav2_params.yaml
+++ b/config/arov_nav2_params.yaml
@@ -34,115 +34,63 @@ bt_navigator:
       #- nav2_back_up_action_bt_node
       #- nav2_clear_costmap_service_bt_node
 
-#--- prediction_horizon_s = steps * dt ---#
-#--- prediction_horizon_s * vmax <= local_side/2 otherwise movement will stutter --#
-#--- prediction_horizon_s * max_speed / path_resolution / 3.0 = path_offset ---#
 controller_server:
   ros__parameters:
-    controller_frequency: 20.0
-    publish_zero_velocity: True
-    costmap_update_timeout: 0.6 # after 3 failed updates timeout
-    min_x_velocity_threshold: 0.001
-    min_y_velocity_threshold: 0.001
-    min_theta_velocity_threshold: 0.001
-    failure_tolerance: 0.3      # after fails for 0.3s then fail pathing action
-
-    controller_plugins: [ "FollowPath" ]
-    progress_checker_plugins: [ "progress_checker" ]
-    goal_checker_plugins: [ "general_goal_checker" ]
+    use_sim_time: false
+    #FollowPath:
+    #  plugin: "nav2_regulated_pure_pursuit_controller::RegulatedPurePursuitController"
+    #  desired_linear_vel: 0.5
+    #  max_angular_vel: 1.0
+    #  min_lookahead_dist: 0.3
+    #  lookahead_time: 1.5
+    #  rotate_to_heading_angular_vel: 0.6
+    controller_plugins: ["FollowPath"]
     FollowPath:
-      plugin: "nav2_mppi_controller::MPPIController"
-      motion_model: "Omni"
-      time_steps: 20
-      model_dt: 0.1
-      batch_size: 2000
-      iteration_count: 1
-      temperature: 0.3
-      gamma: 0.015
-      prune_distance: 1.5 # default value
-      vx_std: 0.2
-      vx_min: 0.1
-      vx_max: 0.5
-      ax_min: -2.0
-      ax_max: 2.0
-      vy_std: 0.2
-      vy_max: 0.5
-      ay_min: -2.0
-      ay_max: 2.0
-      wz_std: 0.2
-      wz_max: 1.0
-      az_max: 2.0
-      critics: ["ConstraintCritic", 
-                "CostCritic", 
-                "GoalCritic", 
-                "GoalAngleCritic", 
-                "PathAlignCritic", 
-                "PathAngleCritic", 
-                "PathFollowCritic", 
-                "PreferForwardCritic", 
-                "TwirlingCritic"]
-      ConstraintCritic:
-        enabled: True
-        cost_power: 1
-        cost_weight: 4.0
-      CostCritic:
-        enabled: True
-        cost_power: 1
-        cost_weight: 3.81
-        critical_cost: 300.0
-        consider_footprint: True
-        collision_cost: 1000000.0
-        near_goal_distance: 1.0
-        trajectory_point_step: 2
-      GoalCritic:
-        enabled: True
-        cost_power: 1
-        cost_weight: 8.0  # higher - closer to goal, lower - more lax, default 5.0
-        threshold_to_consider: 2  # time_steps * model_dt
-      GoalAngleCritic:
-        enabled: True
-        cost_power: 1
-        cost_weight: 8.0  # higher - closer to goal, lower - more lax, default 3.0
-        threshold_to_consider: 1  # start rotating to goal pose 1m away
-      PathAlignCritic:
-        enabled: True
-        cost_power: 1
-        cost_weight: 14.0
-        offset_from_furthest: 20
-        threshold_to_consider: 2
-      PathAngleCritic:
-        enabled: True
-        cost_power: 1
-        cost_weight: 2.0
-        offset_from_furthest: 20
-        threshold_to_consider: 2
-        mode: 1
-      PathFollowCritic:
-        enabled: True
-        cost_power: 1
-        cost_weight: 5.0
-        offset_from_furthest: 10
-        threshold_to_consider: 2
-      PreferForwardCritic:  # incentivize always moving forwards instead of backwards/oblique angles
-        enabled: False
-        cost_power: 1
-        cost_weight: 5.0
-        threshold_to_consider: 2
-      TwirlingCritic: # needed for omni, makes sure AROV doesn't spin in place
-        enabled: True
-        twirling_cost_power: 1
-        twirling_cost_weight: 10.0
+      plugin: "dwb_core::DWBLocalPlanner"
+      debug_trajectory_details: true
+      min_vel_x: 0.0
+      min_vel_y: 0.0
+      max_vel_x: 0.3
+      max_vel_y: 0.3
+      max_vel_theta: 0.3
+      min_speed_xy: 0.0
+      max_speed_xy: 0.3
+      min_speed_theta: 0.0
+      acc_lim_x: 2.5
+      acc_lim_theta: 3.2
+      decel_lim_x: -2.5
+      decel_lim_theta: -3.2
 
-    progress_checker:
-      plugin: "nav2_controller::SimpleProgressChecker"
-      required_movement_radius: 0.5
-      movement_time_allowance: 10 # if not moving 0.5m in 10s then movement failed
+      critics: [
+        "RotateToGoal",
+        "ObstacleFootprint",
+        "PathAlign",
+        "PathDist",
+        "GoalAlign"
+      ]
 
-    general_goal_checker:
+      RotateToGoal.scale: 32.0
+      ObstacleFootprint.scale: 0.01
+      PathAlign.scale: 32.0
+      PathDist.scale: 32.0
+      GoalAlign.scale: 24.0
+
+    # Goal checker plugin setup
+    current_goal_checker: "simple_goal_checker"
+    goal_checker_plugins: ["simple_goal_checker"]
+    simple_goal_checker:
       plugin: "nav2_controller::SimpleGoalChecker"
       xy_goal_tolerance: 0.25
       yaw_goal_tolerance: 0.25
-      stateful: True  # check xy again after rotating to pose
+      stateful: false
+
+    # Progress checker plugin setup
+    current_progress_checker: "simple_progress_checker"
+    progress_checker_plugins: ["simple_progress_checker"]
+    simple_progress_checker:
+      plugin: "nav2_controller::SimpleProgressChecker"
+      required_movement_radius: 0.5
+      movement_time_allowance: 10.0
 
 local_costmap:
   local_costmap:
