--- a/config/arov_nav2_params.yaml
+++ b/config/arov_nav2_params.yaml
@@ -95,7 +95,7 @@ controller_server:
 local_costmap:
   local_costmap:
     ros__parameters:
-      global_frame: odom
+      global_frame: arov/odom
       robot_base_frame: arov/base_frame
       robot_radius: 0.35
       height: 3
@@ -167,7 +167,7 @@ behavior_server:
       plugin: "nav2_behaviors::Wait"
     assisted_teleop:
       plugin: "nav2_behaviors::AssistedTeleop"
-    local_frame: odom
+    local_frame: arov/odom
     global_frame: map
     robot_base_frame: arov/base_link
     transform_timeout: 0.1
