--- a/config/asv_nav2_params.yaml
+++ b/config/asv_nav2_params.yaml
@@ -14,7 +14,7 @@ bt_navigator:
     default_nav_to_pose_bt_xml: "/opt/ros/jazzy/share/nav2_bt_navigator/behavior_trees/navigate_to_pose_w_replanning_and_recovery.xml"
     #default_nav_through_poses_bt_xml: "/opt/ros/jazzy/share/nav2_bt_navigator/behavior_trees/navigate_through_poses_w_replanning_and_recovery.xml"
     global_frame: "map"
-    robot_base_frame: "asv/base_link"
+    robot_base_frame: "base_link"
     # Add these to silence the warning
     follow_path_error_code: 10
     compute_path_error_code: 11
@@ -95,8 +95,8 @@ controller_server:
 local_costmap:
   local_costmap:
     ros__parameters:
-      global_frame: asv/odom
-      robot_base_frame: asv/base_link
+      global_frame: odom
+      robot_base_frame: base_link
       robot_radius: 0.65
       height: 3
       width: 3
@@ -111,7 +111,7 @@ global_costmap:
   global_costmap:
     ros__parameters:
       global_frame: map
-      robot_base_frame: asv/base_link
+      robot_base_frame: base_link
       robot_radius: 0.65
       resolution: 0.01
       update_frequency: 5.0
@@ -167,9 +167,9 @@ behavior_server:
       plugin: "nav2_behaviors::Wait"
     assisted_teleop:
       plugin: "nav2_behaviors::AssistedTeleop"
-    local_frame: asv/odom
+    local_frame: odom
     global_frame: map
-    robot_base_frame: asv/base_link
+    robot_base_frame: base_link
     transform_timeout: 0.1
     simulate_ahead_time: 2.0
     max_rotational_vel: 0.5
