--- a/config/control_server_params.yaml
+++ b/config/control_server_params.yaml
@@ -4,3 +4,5 @@ control_action_server:
     cleaning_routine_depth: 6.0
     cleaning_routine_width: 8.0
     cleaning_routine_strip_width: 1.0
+    cleaning_routine_apriltag_offset: 0.0
+    cleaning_routine_apriltag_clearance: 0.0
