--- a/package.xml
+++ b/package.xml
@@ -9,11 +9,11 @@
 
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>joint_state_publisher_gui</exec_depend>
-  <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>rviz</exec_depend>
   <exec_depend>xacro</exec_depend>
 
   <build_depend>asv_arov_interfaces</build_depend>
+  <build_depend>robot_guidance</build_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
@@ -23,6 +23,7 @@
   <exec_depend>navigation2</exec_depend>
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>asv_arov_interfaces</exec_depend>
+  <exec_depend>robot_guidance</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
