--- a/config/asv_nav2_dwb.yaml
+++ b/config/asv_nav2_dwb.yaml
@@ -66,51 +66,43 @@ asv/controller_server:
     FollowPath:
       plugin: "dwb_core::DWBLocalPlanner"
       debug_trajectory_details: True
-      short_circuit_trajectory_evalaution: True
-      stateful: True
-      # kinematics
-      min_vel_x: -1.0
-      max_vel_x: 1.0
-      acc_lim_x: 0.5
-      decel_lim_x: -0.5
+      min_vel_x: 0.0
       min_vel_y: 0.0
+      max_vel_x: 0.26
       max_vel_y: 0.0
+      max_vel_theta: 1.0
+      min_speed_xy: 0.0
+      max_speed_xy: 0.26
+      min_speed_theta: 0.0
+      acc_lim_x: 2.5
       acc_lim_y: 0.0
+      acc_lim_theta: 3.2
+      decel_lim_x: -2.5
       decel_lim_y: 0.0
-      min_speed_xy: -1.0
-      max_speed_xy: 1.0
-      min_speed_theta: -1.5
-      max_vel_theta: 1.5
-      acc_lim_theta: 2.5
-      decel_lim_theta: -2.5
-      # xytheta iterator
+      decel_lim_theta: -3.2
       vx_samples: 20
       vy_samples: 5
       vtheta_samples: 20
-      # trajectory generator
-      sim_time: 1.5 # time to simulate path by
-      time_granularity: 0.5
-      linear_granularity: 0.5
+      sim_time: 1.7
+      linear_granularity: 0.05
       angular_granularity: 0.025
-      include_last_point: True
-      limit_vel_cmd_in_traj: True # uses sampled velocity instead of commanded velocity for limits
-      # critics
-      critics: [ "BaseObstacle", "GoalAlign", "GoalDist",
-                 "ObstacleFootprint", "Oscillation", "PathAlign",
-                 "PathDist", "PreferForward", "RotateToGoal", "Twirling" ]
-      BaseObstacle.scale: 0.5
-      GoalAlign.forward_point_distance: 0.1
-      GoalAlign.scale: 10.0
-      GoalDist.scale: 10.0
-      ObstacleFootprint.scale: 25.0
+      transform_tolerance: 0.2
+      xy_goal_tolerance: 0.25
+      trans_stopped_velocity: 0.25
+      short_circuit_trajectory_evaluation: True
+      limit_vel_cmd_in_traj: False
+      stateful: True
+      critics: [ "RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist" ]
+      BaseObstacle.scale: 0.02
+      PathAlign.scale: 32.0
+      GoalAlign.scale: 24.0
       PathAlign.forward_point_distance: 0.1
-      PathAlign.scale: 5.0
-      PathDist.scale: 20.0
-      PreferForward.scale: 100.0
-      RotateToGoal.trans_stopped_velocity: 0.05
-      RotateToGoal.slowing_factor: 2.5
-      RotateToGoal.lookahead_time: 1.5
-      Twirling.scale: 30.0
+      GoalAlign.forward_point_distance: 0.1
+      PathDist.scale: 32.0
+      GoalDist.scale: 24.0
+      RotateToGoal.scale: 32.0
+      RotateToGoal.slowing_factor: 5.0
+      RotateToGoal.lookahead_time: -1.0
 
 asv/local_costmap:
   local_costmap:
