--- a/config/arov_nav2_params.yaml
+++ b/config/arov_nav2_params.yaml
@@ -39,99 +39,17 @@ arov/bt_navigator:
 #--- prediction_horizon_s * max_speed / path_resolution / 3.0 = path_offset ---#
 arov/controller_server:
   ros__parameters:
-    controller_frequency: 20.0
+    controller_frequency: 10.0
     publish_zero_velocity: True
     costmap_update_timeout: 0.6 # after 3 failed updates timeout
-    min_x_velocity_threshold: 0.001
-    min_y_velocity_threshold: 0.001
-    min_theta_velocity_threshold: 0.001
+    min_x_velocity_threshold: 0.1
+    min_y_velocity_threshold: 0.1
+    min_theta_velocity_threshold: 0.1
     failure_tolerance: 0.3      # after fails for 0.3s then fail pathing action
-
-    controller_plugins: [ "FollowPath" ]
+#    odom_topic:
     progress_checker_plugins: [ "progress_checker" ]
     goal_checker_plugins: [ "general_goal_checker" ]
-    FollowPath:
-      plugin: "nav2_mppi_controller::MPPIController"
-      motion_model: "Omni"
-      time_steps: 20
-      model_dt: 0.1
-      batch_size: 200
-      iteration_count: 1
-      temperature: 0.3
-      gamma: 0.015
-      prune_distance: 1.5 # default value
-      vx_std: 0.2
-      vx_min: -1.7
-      vx_max: 1.7
-      ax_min: -2.0
-      ax_max: 2.0
-      vy_std: 0.2
-      vy_max: 1.7
-      ay_min: -2.0
-      ay_max: 2.0
-      wz_std: 0.2
-      wz_max: 1.0
-      az_max: 2.0
-      critics: ["ConstraintCritic", 
-                "CostCritic", 
-                "GoalCritic", 
-                "GoalAngleCritic", 
-                "PathAlignCritic", 
-                "PathAngleCritic", 
-                "PathFollowCritic", 
-                "PreferForwardCritic", 
-                "TwirlingCritic"]
-      ConstraintCritic:
-        enabled: True
-        cost_power: 1
-        cost_weight: 4.0
-      CostCritic:
-        enabled: True
-        cost_power: 1
-        cost_weight: 3.81
-        critical_cost: 300.0
-        consider_footprint: True
-        collision_cost: 1000000.0
-        near_goal_distance: 1.0
-        trajectory_point_step: 2
-      GoalCritic:
-        enabled: True
-        cost_power: 1
-        cost_weight: 8.0  # higher - closer to goal, lower - more lax, default 5.0
-        threshold_to_consider: 2.0  # time_steps * model_dt
-      GoalAngleCritic:
-        enabled: True
-        cost_power: 1
-        cost_weight: 8.0  # higher - closer to goal, lower - more lax, default 3.0
-        threshold_to_consider: 1.0  # start rotating to goal pose 1m away
-      PathAlignCritic:
-        enabled: True
-        cost_power: 1
-        cost_weight: 14.0
-        offset_from_furthest: 20
-        threshold_to_consider: 2.0
-      PathAngleCritic:
-        enabled: True
-        cost_power: 1
-        cost_weight: 2.0
-        offset_from_furthest: 20
-        threshold_to_consider: 2.0
-        mode: 1
-      PathFollowCritic:
-        enabled: True
-        cost_power: 1
-        cost_weight: 5.0
-        offset_from_furthest: 10
-        threshold_to_consider: 2.0
-      PreferForwardCritic:  # incentivize always moving forwards instead of backwards/oblique angles
-        enabled: False
-        cost_power: 1
-        cost_weight: 5.0
-        threshold_to_consider: 2.0
-      TwirlingCritic: # needed for omni, makes sure AROV doesn't spin in place
-        enabled: True
-        twirling_cost_power: 1
-        twirling_cost_weight: 10.0
+    controller_plugins: [ "FollowPath" ]
 
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
@@ -140,16 +58,32 @@ arov/controller_server:
 
     general_goal_checker:
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.25
-      yaw_goal_tolerance: 0.25
+      xy_goal_tolerance: 0.1
+      yaw_goal_tolerance: 0.1
       stateful: True  # check xy again after rotating to pose
+
+    FollowPath:
+      plugin: "nav2_regulated_pure_pursuit_controller::RegulatedPurePursuitController"
+      desired_linear_vel: 0.75
+      max_angular_vel: 0.5
+      max_angular_accel: 1.0
+      min_approach_linear_velocity: 0.1
+      approach_velocity_scaling_dist: 0.3
+
+      use_velocity_scaled_lookahead_dist: True
+      min_lookahead_dist: 0.5
+      max_lookahead_dist: 1.7
+      lookahead_time: 1.0
+
+      use_rotate_to_heading: True
+      rotate_to_heading_angular_vel: 1.0
 
 arov/local_costmap:
   local_costmap:
     ros__parameters:
       global_frame: arov/odom
       robot_base_frame: arov/base_link
-      robot_radius: 0.35
+      robot_radius: 0.353
       height: 3
       width: 3
       resolution: 0.01
@@ -164,7 +98,7 @@ arov/global_costmap:
     ros__parameters:
       global_frame: map
       robot_base_frame: arov/base_link
-      robot_radius: 0.35
+      robot_radius: 0.353
       resolution: 0.01
       update_frequency: 5.0
       publish_frequency: 5.0
