--- a/config/arov_nav2_params.yaml
+++ b/config/arov_nav2_params.yaml
@@ -64,9 +64,9 @@ arov/controller_server:
 
     FollowPath:
       plugin: "nav2_regulated_pure_pursuit_controller::RegulatedPurePursuitController"
-      desired_linear_vel: 0.75
+      desired_linear_vel: 0.1
       max_angular_vel: 0.5
-      max_angular_accel: 1.0
+      max_angular_accel: 0.5
       min_approach_linear_velocity: 0.1
       approach_velocity_scaling_dist: 0.3
 
@@ -125,7 +125,7 @@ arov/global_costmap:
 arov/map_server:
   ros__parameters:
     use_sim_time: false
-    yaml_filename: "dog_pool.yaml"
+    yaml_filename: "demo_tank.yaml"
     frame_id: "map"
     topic_name: "map"
 
